# VoiceCalendar-AI

./: .env.example  README.md  app.py  build.ps1  build.sh  env  pyproject.toml  test_nlu.py
.github/workflows/: cd.yml  ci.yml  security.yml
tests/: test_audio_capture.py  test_config.py  test_errors.py  test_models.py  test_nlu.py  test_services.py
voicecalendar/: __init__.py  __main__.py  config.py  main.py
voicecalendar/core/: __init__.py  resources.py  settings.py  theme.py
voicecalendar/models/: __init__.py  event.py
voicecalendar/resources/: __init__.py
voicecalendar/resources/styles/: base.qss  dark.qss  light.qss
voicecalendar/services/: __init__.py  asr_dashscope.py  asr_service.py  audio_capture.py  calendar_backend.py  errors.py  nlu_parser.py  pipeline.py
voicecalendar/ui/: __init__.py  main_window.py  titlebar.py
voicecalendar/ui/components/: __init__.py  toast.py
voicecalendar/ui/widgets/: __init__.py  base_widget.py  skeleton.py  waveform.py
