[project]
name = "voicecalendar-pro"
version = "0.1.0"
description = "A voice-powered calendar desktop application built with PyQt6"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyqt6>=6.6.0",
    "pyqt6-webengine>=6.6.0",
    "openai>=1.30.0",
    "openai-whisper>=20231117",
    "ics>=0.7.2",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.2.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
voicecalendar = "voicecalendar.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voicecalendar"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyqt6"
