[project]
name = "voicecalendar-pro"
version = "0.1.0"
description = "A voice-powered calendar desktop application built with PyQt6"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyqt6>=6.6.0",
    "pyqt6-webengine>=6.6.0",
    "openai>=1.30.0",
    "openai-whisper>=20231117",
    "ics>=0.7.2",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "sounddevice==0.5.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.2.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
voicecalendar = "voicecalendar.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voicecalendar"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E402",   # module import not at top of file (条件导入/函数内导入在 PyQt 中很常见)
    "E501",   # line too long (ruff line-length 已在上方设置，此规则与 line-length 重复)
    "N802",   # invalid function name (_on_xxx 槽函数命名约定不符合 PEP8)
    "N818",   # error suffix on exception name (NLUErrors 已有固定命名)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401"]  # 测试文件中 unused import 是合理的 (pytest fixtures)

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyqt6"
